[package]
name = "numex"
version = "0.1.0"
authors = ["Kapustin Alexandr <kapustin@cindicator.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "numex"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.8.2"
features = ["extension-module"]

[dependencies]
numpy = "0.7.0"
ndarray = "0.12"